--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GameDefaultMap=/Game/Levels/NewMap.NewMap
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
