--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/ThirdPersonBP/ThirdPersonGameMode.ThirdPersonGameMode_C
 GameDefaultMap=/Game/Levels/NewMap.NewMap
+EditorStartupMap=/Game/Levels/TestMap.TestMap
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
